Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quos, quod necessitatibus molestias dolore architecto ipsam quo numquam perspiciatis, facilis at praesentium natus harum velit tempore quaerat veritatis. Voluptate, autem.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, voluptate nobis facere laboriosam, iusto inventore, deserunt qui minima exercitationem expedita beatae aliquam in! Excepturi amet, praesentium maxime sint velit vero!</p>
 </body>
 </html>
